product/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/vcs-uri: https://github.com/drhelius/grpc-demo-product
    app.openshift.io/vcs-ref: ${PRODUCT_VERSION}
  labels:
    app: product
    version: ${PRODUCT_VERSION}
    app.kubernetes.io/name: product
    app.kubernetes.io/version: ${PRODUCT_VERSION}
    app.kubernetes.io/component: service
    app.kubernetes.io/part-of: ${APP_NAME}
    app.openshift.io/runtime: golang
  name: product-${PRODUCT_VERSION}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
      version: ${PRODUCT_VERSION}
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: product
        version: ${PRODUCT_VERSION}
    spec:
      containers:
      - image: ${PRODUCT_IMAGE}:${PRODUCT_VERSION}
        imagePullPolicy: Always
        name: product
        ports:
        - containerPort: 5000
          protocol: TCP
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: ${CPU_LIMIT}
            memory: ${MEMORY_LIMIT}Mi
          requests:
            cpu: ${CPU_REQUEST}
            memory: ${MEMORY_REQUEST}Mi
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 30
