product/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: product
    version: ${PRODUCT_VERSION}
    app.kubernetes.io/name: product
    app.kubernetes.io/version: ${PRODUCT_VERSION}
    app.kubernetes.io/component: service
    app.kubernetes.io/part-of: ${APP_NAME}
  name: product
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: product
    weight: 100
